# galaexi

./: README.md  compile_galaexi.sh
Tests/: CART_HEX_PERIODIC_16_16_16_mesh.h5  clean.sh  job_rocprof.sh  parameter_flexi.ini
galaexi/: CMakeLists.txt  README.md
galaexi/cmake/: SetCompiler.cmake  SetLibraries.cmake  SetLinker.cmake  SetMachine.cmake
galaexi/docs/documentation/: 02_codeoverview.md  03_workflow.md  conf.py  index.md  requirements.txt
galaexi/docs/documentation/devguide/: 01_gitworkflow.md  02_styleguide.md  03_datastructures.md  04_usefulfunctions.md  05_bestpractices.md  06_troubleshooting.md  07_codeextension.md  08_mpi.md  09_testing.md  10_performance.md  11_documentation.md  12_kerneldev.md  index.md
galaexi/regressioncheck/checks/convtest/: builds.ini
galaexi/regressioncheck/checks/h5diff/: builds.ini
galaexi/regressioncheck/checks/naca/: builds.ini
galaexi/regressioncheck/checks/naca/3D/: NACA0012_Re5000_AoA8_3D_BaseFlow_Referenz_0000010.000000000.h5  NACA0012_Re5000_AoA8_3D_Referenz_0000010.000000000.h5
galaexi/regressioncheck/checks/parabolic/: builds.ini
galaexi/regressioncheck/checks/parabolic/cavity_3D_FV/: cavity4x4x4_mesh.h5  reggie_cavity_Re100_State_0000001.000000000.h5
galaexi/regressioncheck/checks/riemann/: builds.ini
galaexi/regressioncheck/checks/run_basic/: builds.ini
galaexi/regressioncheck/checks/tgv/: builds.ini
galaexi/regressioncheck/checks/timedisc/: builds.ini
galaexi/src/: CMakeLists.txt  commit.h  flexi.h  flexilib.f90
galaexi/src/analyze/: analyze.f90
galaexi/src/baseflow/: baseflow_readin.f90
galaexi/src/device/: device.cpp  device.f90  device.h  device_manage.cu  device_manage.f90  device_mem.cpp  device_mem.f90  main.cu  offsets.cu
galaexi/src/dg/: applydmatrix.cu  applydmatrix.f90  dg.f90  dg_vars.f90  fillflux.cu  fillflux.f90  surfint.cu  surfint.f90  surfint.t90  volint.cu  volint.f90
galaexi/src/dg/lifting/: lifting_br1.t90  lifting_br2.t90  lifting_vars.f90
galaexi/src/equations/navierstokes/: analyze_equation.f90  calcbodyforces.f90  calctimestep.cu  calctimestep.f90  equation.f90  flux.cu  flux.f90  jac_split.f90  riemann.cu  riemann.f90  splitflux.cu  splitflux.f90  timeavg.f90
galaexi/src/equations/navierstokes/eddyVisc/: eddyVisc_vars.f90
galaexi/src/equations/navierstokes/idealgas/: eos.cu  eos.f90  eos.h  eos_vars.f90  getboundaryflux.f90
galaexi/src/fv/: fv.f90  fv_metrics.f90  fv_vars.f90  fv_volint.f90
galaexi/src/globals/: 2d.f90  vector.cu  vector.f90
galaexi/src/indicator/: indicator.f90
galaexi/src/interpolation/: applyjacobian.cu  applyjacobian.f90  changeBasis.f90  interpolation.f90  interpolation_vars.f90  prolongtoface.cu  prolongtoface.f90
galaexi/src/mesh/: mesh.cu  mesh.f90  mesh_readin.f90  mesh_vars.f90  metrics.f90  prepare_mesh.f90
galaexi/src/output/: output.f90
galaexi/src/precond/jac_ex/: jac_ex_reconstruction.f90
galaexi/src/restart/: restart.f90
galaexi/src/sponge/: sponge.f90
galaexi/src/testcase/riemann/: testcase.f90  testcase_vars.f90
galaexi/src/testcase/taylorgreenvortex/: testcase.f90
galaexi/src/timedisc/: timedisc.f90  timedisc_func.f90  timedisc_vars.f90  timestep.f90
galaexi/tools/convergence_test/: execute_flexi.py
galaexi/tutorials/cavity/Basic_Re100/: cavity2x2_mesh.h5  cavity4x4_mesh.h5
galaexi/tutorials/channel/: CHANNEL_004_mesh.h5
galaexi/tutorials/linadv/: CART_1D_mesh.h5
galaexi/unitTests/: ApplyDMatrix.f90  ApplyJacobian.f90  CMakeLists.txt  CalcTimeStep.f90  DeviceMemTools.cu  DeviceMemTools.f90  EOS.f90  EvalFlux.cu  EvalFlux.f90  MatrixInverse.f90  ProlongToFace.f90  Riemann.cu  Riemann.f90  SplitFlux.cu  SplitFlux.f90  SurfInt.f90  VAX.f90  check_for_device.cpp  unittest.f90
